--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ h2 {
     /*text-shadow: -4px 4px rgba(0,0,0,1.0);*/
 
     position: absolute;
-    bottom: 40px;
+    top: 15px;
     left: 15px;
 
     /*background-color: rgba(255,255,255, 0.9);*/
@@ -134,7 +134,7 @@ h2 {
     padding-bottom: 2px;
 
     position: absolute;
-    bottom: 15px;
+    top: 65px;
     left: 15px;
 
     /*background-color: rgba(255,255,255, 0.9);*/
