minor cosmetic changes

--- a/style.css
+++ b/style.css
@@ -62,8 +62,8 @@ header img {
   text-align: center;
   font-weight: 700;
   font-size: 18px;
-  padding: 10px 0;
-  padding-left: 10px;
+  padding: 10px 40px;
+  /* padding-left: 10px; */
   margin: 0;
 }
 
@@ -71,6 +71,8 @@ header img {
   padding: 0 5px;
   border-radius: 4px;
   font-weight: 800;
+
+  line-height: 1.5;
 }
 
 .header--socials i {
@@ -191,7 +193,7 @@ header img {
 }
 
 footer {
-  padding-bottom: 50px;
+  padding-bottom: 100px;
   text-align: center;
 }
 
